<resources>
    <string name="app_name">Marvel App</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_email">Email</string>
    <string name="eventos">Eventos</string>
    <string name="Series">Series</string>
    <string name="peliculas">Peliculas</string>
    <string name="noticias">Noticias</string>
    <string name="nombre">Nombre de Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="alert_tittle_item">Alert Personalizado</string>
    <string name="alert_dialog_message">Mensaje</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
</resources>
