<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="50%"
        android:weightSum="2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/background_dark"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="1">
            <TextView
                android:text="@string/eventos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"/>

            <ImageView
                android:id="@+id/Eventos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cuatro_fantasticos"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_dark"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <TextView
                android:text="@string/Series"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"/>

            <ImageView
                android:id="@+id/Series"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/arma_x">

            </ImageView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="50%"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@android:color/background_dark"
            android:orientation="vertical">
            <TextView
                android:text="@string/peliculas"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"/>
            <ImageView
                android:id="@+id/peliculas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/civil_war_dos">

            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@android:color/background_dark"
            android:orientation="vertical">
            <TextView
                android:text="@string/noticias"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"/>

            <ImageView
                android:id="@+id/noticias"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/spiderman_unlimited">

            </ImageView>
        </LinearLayout>
    </LinearLayout>


</android.support.percent.PercentRelativeLayout>